[package]
name = "hct-cam16"
version = "0.1.0"
edition = "2021"
authors = ["Edgar H Sanchez"]
description = "CAM16 + HCT perceptual color math with sRGB/XYZ/L* conversions and a gamut-mapping solver. Deterministic ARGB-in/ARGB-out, no UI/engine dependencies."
license = "MIT"
repository = "https://github.com/edgarhsanchez/hct_cam16"
readme = "README.md"
keywords = ["color", "hct", "cam16", "material", "palette"]
categories = ["graphics", "mathematics"]

[dependencies]

[dev-dependencies]

[features]
default = []
